<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout style="@style/layout_input" >

        <TextView
            style="@style/label_input"
            android:text="@string/line1" />

        <EditText
            android:id="@+id/edit1"
            style="@style/edit_input" />
    </LinearLayout>

    <LinearLayout style="@style/layout_input" >

        <TextView
            style="@style/label_input"
            android:text="@string/line2" />

        <EditText
            android:id="@+id/edit2"
            style="@style/edit_input" />
    </LinearLayout>

    <LinearLayout style="@style/layout_input" >

        <TextView
            style="@style/label_input"
            android:text="@string/line3" />

        <EditText
            android:id="@+id/edit3"
            style="@style/edit_input" />
    </LinearLayout>

    <LinearLayout style="@style/layout_input" >

        <TextView
            style="@style/label_input"
            android:text="@string/line4" />

        <EditText
            android:id="@+id/edit4"
            style="@style/edit_input" />
    </LinearLayout>

    <LinearLayout style="@style/layout_input" >

        <TextView
            style="@style/label_input"
            android:text="@string/line5" />

        <EditText
            android:id="@+id/edit5"
            style="@style/edit_input" />
    </LinearLayout>

    <LinearLayout style="@style/layout_input" >

        <TextView
            style="@style/label_input"
            android:text="@string/line6" />

        <EditText
            android:id="@+id/edit6"
            style="@style/edit_input" />
    </LinearLayout>

    <LinearLayout style="@style/layout_input" >

        <TextView
            style="@style/label_input"
            android:text="@string/line7" />

        <EditText
            android:id="@+id/edit7"
            style="@style/edit_input" />
    </LinearLayout>

    <LinearLayout style="@style/layout_input" >

        <TextView
            style="@style/label_input"
            android:text="@string/line8" />

        <EditText
            android:id="@+id/edit8"
            style="@style/edit_input" />
    </LinearLayout>

    <LinearLayout style="@style/layout_input" >

        <TextView
            style="@style/label_input"
            android:text="@string/line9" />

        <EditText
            android:id="@+id/edit9"
            style="@style/edit_input" />
    </LinearLayout>

</LinearLayout>